--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    
+    <h1>Recipes Odin</h1>
+    <a href="/recipes/feijoada.html">Feijoada</a>
 </body>
 </html>
