Atualizando Variedade de Receitas

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Recipes Odin</h1>
-    <a href="/recipes/feijoada.html">Feijoada</a>
+    <ul>
+        <li><a href="/recipes/feijoada.html">Feijoada</a></li>
+        <li><a href="/recipes/lasanha.html">Lasanha</a></li>
+        <li></li>
+    </ul>
+    
 </body>
 </html>
